# bandcamp-downloader

./: .devcontainer.json  LICENSE  README.md  pyproject.toml
bandcamp_downloader/: __init__.py  constants.py
