[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bandcamp-downloader"
version = "0.1.1"
description = "Download your collection from Bandcamp."
authors = ["Andrew Slice"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/easlice/bandcamp-downloader"
keywords = ["bandcamp, music"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: System :: Archiving",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/easlice/bandcamp-downloader/issues"
"Source" = "https://github.com/easlice/bandcamp-downloader"

[tool.poetry.scripts]
bandcamp-downloader = "bandcamp_downloader:main"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
browser-cookie3 = "^0.19.1"
bs4 = "^0.0.1"
certifi = "^2023.7.22"
cffi = "^1.16.0"
charset-normalizer = "^3.3.0"
cryptography = "^41.0.4"
idna = "^3.4"
importlib-metadata = "^6.8.0"
jaraco-classes = "^3.3.0"
jeepney = "^0.8.0"
keyring = "^24.2.0"
lz4 = "^4.3.2"
more-itertools = "^10.1.0"
pbkdf2 = "^1.3"
pyaes = "^1.6.1"
pycparser = "^2.21"
pycryptodome = "^3.19.0"
requests = "^2.31.0"
secretstorage = "^3.3.3"
soupsieve = "^2.5"
tqdm = "^4.66.1"
urllib3 = "^2.0.6"
zipp = "^3.17.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
black = "^23.9.1"

[tool.black]
line_length = 80
